[package]
name = "rust-robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
stm32f4 = { version = "0.15.1", features = ["stm32f401"] }


# Uncomment for the panic example.
# panic-itm = "0.4.1"

# this lets you use `cargo fix`!
[[bin]]
name = "assignment1"
test = false
bench = false

[[bin]]
name = "interrupts"
test = false
bench = false

[[bin]]
name = "playground"
test = false
bench = false

[[bin]]
name = "assignment2"
test = false
bench = false

[lib]
name = "my_hal"
path = "src/lib/mod.rs"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
lto = true # better optimizations
